*Rails 3.0.0 [beta 2] (April 1st, 2010)*

* Reduced load time by deferring configuration of classes using
  ActiveSupport::on_load(:component_name) [YK]

* Rename #metaclass to #singleton_class now that ruby-core has decided [JK]

* New assertions assert_blank and assert_present.  #4299 [Juanjo Bazan] 

* Use Object#singleton_class instead of #metaclass. Prefer Ruby's choice.  [Jeremy Kemper]

* JSON backend for YAJL. Preferred if available.  #2666 [Brian Lopez]


*Rails 3.0.0 [beta 1] (February 4, 2010)*

* Introduce class_attribute to declare inheritable class attributes. Writing an attribute on a subclass behaves just like overriding the superclass reader method.  Unifies and replaces most usage of cattr_accessor, class_inheritable_attribute, superclass_delegating_attribute, and extlib_inheritable_attribute.  [Jeremy Kemper, Yehuda Katz]

* Time#- with a DateTime argument behaves the same as with a Time argument, i.e. returns the difference between self and arg as a Float #3476 [Geoff Buesing]

* YAML serialization for OrderedHash.  #3608 [Gregor Schmidt]

* Update bundled TZInfo to v0.3.16 [Geoff Buesing]

* Georgetown TimeZone is now mapped to "America/Guyana" instead of "America/Argentina/San_Juan" #1821 [Geoff Buesing, Reuben Sivan]

* Changed the default ActiveSupport.use_standard_json_time_format from false to true and
ActiveSupport.escape_html_entities_in_json from true to false to match previously announced Rails 3 defaults [DHH]

* Added Object#presence that returns the object if it's #present? otherwise returns nil [DHH/Colin Kelley]

* Add Enumerable#exclude? to bring parity to Enumerable#include? and avoid if !x.include?/else calls [DHH]

* Update Edinburgh TimeZone to use "Europe/London" instead of "Europe/Dublin" #3310 [Phil Ross]

* Update bundled TZInfo to v0.3.15 [Geoff Buesing]
